--- a/app/src/main/res/menu/overflow_menu.xml
+++ b/app/src/main/res/menu/overflow_menu.xml
@@ -12,11 +12,22 @@
   ~ limitations under the License.
   -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <group android:id="@+id/primary">
+        <item
+            android:id="@id/home_dest"
+            android:icon="@drawable/ic_home"
+            android:title="@string/home" />
+        <item
+            android:id="@id/deeplink_dest"
+            android:icon="@drawable/ic_android"
+            android:title="@string/deeplink" />
+    </group>
     <!-- TODO Step 9.1 - Add an item for the settings fragment -->
-    <!--<item-->
-        <!--android:id="@+id/settings_dest"-->
-        <!--android:icon="@drawable/ic_settings"-->
-        <!--android:menuCategory="secondary"-->
-        <!--android:title="@string/settings" />-->
+    <item
+        android:id="@+id/settings_dest"
+        android:icon="@drawable/ic_settings"
+        android:menuCategory="secondary"
+        android:title="@string/settings" />
     <!-- TODO END STEP 9.1 -->
 </menu>
